bindings/fsharp/Proven.fs


    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_monotonic_next(nativeint counter)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_monotonic_free(nativeint counter)

    // --- SafeStateMachine (5) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_state_machine_create(uint32 stateCount, uint32 initialState)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_state_machine_allow(nativeint sm, uint32 from_, uint32 to_)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_state_machine_transition(nativeint sm, uint32 to_)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern uint32 proven_state_machine_state(nativeint sm)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_state_machine_free(nativeint sm)

    // --- SafeTensor (5) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_tensor_create(unativeint rows, unativeint cols)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_tensor_set(nativeint tensor, unativeint row, unativeint col, float value)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern FloatResult proven_tensor_get(nativeint tensor, unativeint row, unativeint col)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_tensor_matmul(nativeint a, nativeint b)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_tensor_free(nativeint tensor)

    // --- SafeML (5) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_ml_softmax(float[] input, float[] output, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_ml_sigmoid(float x)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_ml_relu(float x)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_ml_leaky_relu(float x, float alpha)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_ml_clamp(float x, float minVal, float maxVal)

    // --- SafeLRU (4) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_lru_create(unativeint capacity)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_lru_get(nativeint cache, uint64 key)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_lru_put(nativeint cache, uint64 key, int64 value)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_lru_free(nativeint cache)

    // --- SafeGraph (4) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_graph_create(unativeint nodeCount)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_graph_add_edge(nativeint graph, unativeint from_, unativeint to_)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_graph_has_edge(nativeint graph, unativeint from_, unativeint to_)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_graph_free(nativeint graph)

    // --- SafeRegistry (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_registry_parse(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_registry_to_string(nativeint ref_)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_registry_has_registry(nativeint ref_)

    // --- SafeDigest (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_digest_parse(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_digest_verify(nativeint expected, nativeint actual)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_digest_to_string(nativeint digest)

    // --- SafeHTTP (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_http_url_encode(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_http_url_decode(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_http_parse_www_authenticate(byte[] ptr, unativeint len)

    // --- SafeColor (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern ColorParseResult proven_color_parse_hex(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern HSLColor proven_color_rgb_to_hsl(RGBColor rgb)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_color_to_hex(RGBColor rgb)

    // --- SafeAngle (4) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_angle_deg_to_rad(float degrees)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_angle_rad_to_deg(float radians)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_angle_normalize_degrees(float degrees)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_angle_normalize_radians(float radians)

    // --- SafeUnit (2) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern FloatResult proven_unit_convert_length(float value, int from_, int to_)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern FloatResult proven_unit_convert_temp(float value, int from_, int to_)

    // --- SafeQueue (5) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_queue_create(unativeint capacity)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_queue_push(nativeint queue, int64 value)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_queue_pop(nativeint queue)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern unativeint proven_queue_size(nativeint queue)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_queue_free(nativeint queue)

    // --- SafeBloom (4) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_bloom_create(unativeint expectedElements, float falsePositiveRate)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_bloom_add(nativeint filter, byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_bloom_contains(nativeint filter, byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_bloom_free(nativeint filter)

    // --- Callbacks (5) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern uint32 proven_callback_register(int eventType, nativeint callback, nativeint context)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_callback_unregister(uint32 handle)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_callback_fire(int eventType, nativeint dataPtr, unativeint dataLen, int code)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern uint32 proven_callback_count(int eventType)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern uint32 proven_callback_clear_all()


// ============================================================================
// Internal Marshaling Helpers
// ============================================================================

/// Internal helpers for marshaling between .NET and C ABI types.
/// Not intended for direct use.
[<AutoOpen>]
module internal MarshalHelpers =

    /// Convert a .NET string to a UTF-8 byte array for passing to FFI.
    let toUtf8 (s: string) : byte array =
        Encoding.UTF8.GetBytes(s)

    /// Check if an IntResult succeeded and extract its value.
    let intResultToOption (r: IntResult) : int64 option =
        if r.Status = 0 then Some r.Value
        else None

    /// Check if a BoolResult succeeded and extract its value.
    let boolResultToOption (r: BoolResult) : bool option =
        if r.Status = 0 then Some(r.Value <> 0uy)
        else None

    /// Check if a FloatResult succeeded and extract its value.
    let floatResultToOption (r: FloatResult) : float option =
        if r.Status = 0 then Some r.Value
        else None

    /// Extract a managed string from a StringResult, freeing the native memory.
    let stringResultToOption (r: StringResult) : string option =
        if r.Status = 0 && r.Value <> nativeint 0 then
            let s = Marshal.PtrToStringUTF8(r.Value, int r.Length)
            FFI.proven_free_string(r.Value)
            Some s
        else
            if r.Value <> nativeint 0 then
                FFI.proven_free_string(r.Value)
            None

// ============================================================================
// Safe Wrapper Modules
// ============================================================================

/// Lifecycle management for the Proven runtime.
module Runtime =
    /// Initialize the Proven runtime (must call before any other function).
    let init () : bool =
        FFI.proven_init() = 0

    /// Cleanup the Proven runtime.
    let deinit () : unit =
        FFI.proven_deinit()

    /// Check if the runtime is initialized.
    let isInitialized () : bool =
        FFI.proven_is_initialized()

    /// Get the FFI ABI version for compatibility checking.
    let abiVersion () : uint32 =
        FFI.proven_ffi_abi_version()

    /// Get the library version as a tuple (major, minor, patch).
    let version () : uint32 * uint32 * uint32 =
        (FFI.proven_version_major(), FFI.proven_version_minor(), FFI.proven_version_patch())

    /// Get the total number of modules in the library.
    let moduleCount () : uint32 =
        FFI.proven_module_count()

/// Overflow-checked arithmetic. All operations return Option - None on error.
module SafeMath =
    /// Safe division. Returns None on division by zero or INT64_MIN / -1.
    let div (a: int64) (b: int64) : int64 option =
        FFI.proven_math_div(a, b) |> intResultToOption

    /// Safe modulo. Returns None on division by zero.
    let mod' (a: int64) (b: int64) : int64 option =
        FFI.proven_math_mod(a, b) |> intResultToOption

    /// Checked addition. Returns None on overflow.
    let add (a: int64) (b: int64) : int64 option =
        FFI.proven_math_add_checked(a, b) |> intResultToOption

    /// Checked subtraction. Returns None on underflow.
    let sub (a: int64) (b: int64) : int64 option =
        FFI.proven_math_sub_checked(a, b) |> intResultToOption
